# Computer_Networks-hq-2023Fall-PKU

./: .gitignore  README.md
final_exam/not_pdf/: 期末复习大纲2023.docx  综合例子.pptx  考试注意事项.pptx
final_exam/summary/: 4.网络层.md  5.数据链路层.md
labs/: README.md
labs/2023-lab0-introduction-EmptyBlueBox/: CMakeLists.txt  README.md  hellonetwork.cpp
labs/2023-lab1-myftp-EmptyBlueBox/: CMakeLists.txt  README.md
labs/2023-lab1-myftp-EmptyBlueBox/include/: ftp_client_functions.h  ftp_client_utils.h  ftp_server_functions.h  ftp_server_utils.h
labs/2023-lab1-myftp-EmptyBlueBox/src/: ftp_client.cpp  ftp_client_functions.cpp  ftp_client_utils.cpp  ftp_server.cpp  ftp_server_functions.cpp  ftp_server_utils.cpp
labs/2023-lab1-myftp-EmptyBlueBox/test_local/: .gitignore  CMakeLists.txt  ftp_client_std  test.cpp
labs/2023-lab2-rtp-EmptyBlueBox/: CMakeLists.txt  README.md
labs/2023-lab2-rtp-EmptyBlueBox/src/: receiver.cpp  receiver_functions.cpp  rtp.cpp  sender.cpp  sender_functions.cpp  test.cpp  util.cpp
labs/2023-lab2-rtp-EmptyBlueBox/src/include/: receiver_functions.h  rtp.h  sender_functions.h  util.h
labs/2023-lab2-rtp-EmptyBlueBox/test/: README.md  test.cpp  test_receiver  test_sender
labs/2023-lab2-rtp-EmptyBlueBox/test-origin/: runtest.sh  test.cpp  test_receiver  test_sender
labs/2023-lab2-rtp-EmptyBlueBox/test/send/: test.txt
labs/2023-lab3-router-EmptyBlueBox/: CMakeLists.txt  README.md  router.cpp  router.h  router_prototype.h  simulator.cpp  util.h
labs/2023-lab3-router-EmptyBlueBox/test_local/: CMakeLists.txt  test.cpp
labs/2023-lab4-switch-EmptyBlueBox/: CMakeLists.txt  README.md  simulator.cc  switch.cc  switch.h  types.h
labs/2023-lab4-switch-EmptyBlueBox/test_local/: CMakeLists.txt  test.cc
notes/: 1.计算机网络基础.md  2.应用层.md  3.传输层.md  Computer_Network-Huang_Qun-2023-Fall-Final_Exam_Summary.md
tutorials/习题课1/: Turorial_1(a)_Socket编程.pptx  Tutorial_1(b)_CMAKE与Git.pptx
tutorials/习题课2/Tutorial2-code/: CMakeLists.txt
tutorials/习题课2/Tutorial2-code/src/: rtp_sniffer.c
